<resources>
    <string name="app_name" translatable="false">Podcatcher (In Progress)</string>
    <string name="search_feed" translatable="false">Search for a feed</string>
    <string name="search_button" translatable="false">Search</string>
    <string name="pod_settings" translatable="false">podSettings</string>
    <string name="remote_settings" translatable="false">remoteSettings</string>
    <string name="tap_settings" translatable="false">tapSettings</string>
    <string name="swipe_settings" translatable="false">swipeSettings</string>
    <string name="SyncSummary" translatable="false">Sync podcast feeds with Google Reader</string>
    <string name="SyncTitle" translatable="false">Sync With Google</string>
    <string name="sync_key" translatable="false">syncSetting</string>
    <string name="ControlsSummary" translatable="false">Replace ffwd/rew with skip/back remote controls</string>
    <string name="ControlsTitle" translatable="false">Switch Remote Controls</string>
    <string name="controls_key" translatable="false">controlsSetting</string>
    <string name="UpdateSummary" translatable="false">Update Interval Type</string>
    <string name="UpdateTitle" translatable="false">Feed Update</string>
    <string name="update_key" translatable="false">updateSetting</string>
    <string name="IntervalSummary" translatable="false">How long to wait between feed updates</string>
    <string name="IntervalTitle" translatable="false">Update Interval</string>
    <string name="interval_key" translatable="false">intervalSetting</string>
    <string name="DownloadSummary" translatable="false">Enable auto-download of new episodes</string>
    <string name="DownloadTitle" translatable="false">Auto-download</string>
    <string name="download_key" translatable="false">downloadSetting</string>
    <string name="ArchiveSummary" translatable="false">Don\'t hide old episodes that no longer exist in feeds</string>
    <string name="ArchiveTitle" translatable="false">Show archived episodes</string>
    <string name="archive_key" translatable="false">archiveSetting</string>
    <string name="DownloadsSummary" translatable="false">Show the episodes currently being downloaded</string>
    <string name="DownloadsTitle" translatable="false">Download queue</string>
    <string name="downloads_key" translatable="false">downloadsSetting</string>
    <string name="FinishSummary" translatable="false">Save settings and start Podcatcher</string>
    <string name="FinishTitle" translatable="false">Finish</string>
    <string name="finish_key" translatable="false">finishSetting</string>
    <string name="DownloadWifiSummary" translatable="false">Automatically download episodes only on wifi connection</string>
    <string name="DownloadWifiTitle" translatable="false">Wifi Download Only</string>
    <string name="wifi_key" translatable="false">wifiSetting</string>
    <string name="DownloadPowerSummary" translatable="false">Automatically download episodes only when device powered</string>
    <string name="DownloadPowerTitle" translatable="false">Power Download Only</string>
    <string name="power_key" translatable="false">powerSetting</string>
    <string name="Download4GSummary" translatable="false">Automatically download episodes only on 4G connection</string>
    <string name="Download4GTitle" translatable="false">4G Download Only</string>
    <string name="four_g_key" translatable="false">4gSetting</string>
    <string name="VideoSummary" translatable="false">Download video only on wifi connection</string>
    <string name="VideoTitle" translatable="false">Video Download Wifi Only</string>
    <string name="video_key" translatable="false">videoSetting</string>
    <string name="NightSummary" translatable="false">Automatically dim screen at night</string>
    <string name="NightTitle" translatable="false">Night mode</string>
    <string name="night_key" translatable="false">nightSetting</string>
    <string name="remote_key" translatable="false">remoteKey</string>
    <string name="tap_key" translatable="false">tapKey</string>
    <string name="swipe_key" translatable="false">swipeKey</string>
    <string name="RemoteTitle" translatable="false">Headset Remote</string>
    <string name="RemoteSummary" translatable="false">Single button headset remote settings</string>
    <string name="TapTitle" translatable="false">Tap Remote</string>
    <string name="TapSummary" translatable="false">Tap remote settings</string>
    <string name="SwipeTitle" translatable="false">Swipe Remote</string>
    <string name="SwipeSummary" translatable="false">Swipe remote settings</string>
    <string name="GlobalRemoteTitle" translatable="false">Single Button Remote</string>
    <string name="GlobalRemoteSummary" translatable="false">Toggle one button remote settings</string>
    <string name="GlobalTapTitle" translatable="false">Tap Remote</string>
    <string name="GlobalTapSummary" translatable="false">Toggle tap remote settings</string>
    <string name="edit_tap_sensitivity" translatable="false">Edit Tap Sensitivity</string>
    <string name="enable_tap_remote" translatable="false">Enable Tap Remote</string>
    <string name="enable_swipe_remote" translatable="false">Enable Swipe Remote</string>
    <string name="GlobalSwipeTitle" translatable="false">Swipe Remote</string>
    <string name="GlobalSwipeSummary" translatable="false">Toggle swipe remote settings</string>
    <string name="remotespeed_key" translatable="false">remotespeedSetting</string>
    <string name="playpausepress_key" translatable="false">playpausepressSetting</string>
    <string name="backwardpress_key" translatable="false">backwardpressSetting</string>
    <string name="forwardpress_key" translatable="false">forwardpressSetting</string>
    <string name="RemoteSpeedTitle" translatable="false">Press speed</string>
    <string name="RemoteSpeedSummary" translatable="false">Quickness of presses that register remote actions</string>
    <string name="PlayPausePressTitle" translatable="false">Play/Pause</string>
    <string name="PlayPausePressSummary" translatable="false">Number of presses to indicate play/pause</string>
    <string name="BackwardPressTitle" translatable="false">Rewind</string>
    <string name="BackwardPressSummary" translatable="false">Number of presses to indicate rewind</string>
    <string name="ForwardPressTitle" translatable="false">Fast Forward</string>
    <string name="ForwardPressSummary" translatable="false">Number of presses to indicate fast forward</string>
    <string name="tapsensitivity_key" translatable="false">tapsensitivitySetting</string>
    <string name="playpausetap_key" translatable="false">playpausetapSetting</string>
    <string name="backwardtap_key" translatable="false">backwardtapSetting</string>
    <string name="forwardtap_key" translatable="false">forwardtapSetting</string>
    <string name="TapSensitivityTitle" translatable="false">Tap Sensitivity</string>
    <string name="TapSensitivitySummary" translatable="false">Higher number requires harder tap</string>
    <string name="PlayPauseTapTitle" translatable="false">Play/Pause</string>
    <string name="PlayPauseTapSummary" translatable="false">Number of taps to indicate play/pause</string>
    <string name="BackwardTapTitle" translatable="false">Rewind</string>
    <string name="BackwardTapSummary" translatable="false">Number of taps to indicate rewind</string>
    <string name="ForwardTapTitle" translatable="false">Fast Forward</string>
    <string name="ForwardTapSummary" translatable="false">Number of taps to indicate fast forward</string>
    <string name="playpauseswipe_key" translatable="false">playpauseswipeSetting</string>
    <string name="backwardswipe_key" translatable="false">backwardswipeSetting</string>
    <string name="forwardswipe_key" translatable="false">forwardswipeSetting</string>
    <string name="PlayPauseSwipeTitle" translatable="false">Play/Pause</string>
    <string name="PlayPauseSwipeSummary" translatable="false">Number of swipes to indicate play/pause</string>
    <string name="BackwardSwipeTitle" translatable="false">Rewind</string>
    <string name="BackwardSwipeSummary" translatable="false">Number of swipes to indicate rewind</string>
    <string name="ForwardSwipeTitle" translatable="false">Fast Forward</string>
    <string name="ForwardSwipeSummary" translatable="false">Number of swipes to indicate fast forward</string>
    <string name="markRead" translatable="false">Mark Read</string>
    <string name="markUnread" translatable="false">Mark Unread</string>
    <string name="downloadEpisode" translatable="false">Download</string>
    <string name="doneButton" translatable="false">Done</string>
    <string name="Manual" translatable="false">Manual</string>
    <string name="Interval" translatable="false">Interval</string>
    <string name="Magic" translatable="false">Magic</string>
    <string name="lock" translatable="false">Lock</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="tweak_settings" translatable="false">tweakSettingsKey</string>
    <string name="TweakTitle" translatable="false">Tweak Settings</string>
    <string name="TweakSummary" translatable="false">Granular settings to tweak your experience</string>
    <string name="UpdateGroupTitle" translatable="false">Feed Updating</string>
    <string name="updategroup_key" translatable="false">updateGroupSetting</string>
    <string name="DownloadGroupTitle" translatable="false">Downloading</string>
    <string name="downloadgroup_key" translatable="false">downloadGroupSetting</string>
    <string name="RemoteGroupTitle" translatable="false">Remotes</string>
    <string name="remotegroup_key" translatable="false">remoteGroupSetting</string>
    <string name="OtherGroupTitle" translatable="false">Other</string>
    <string name="othergroup_key" translatable="false">otherGroupSetting</string>
    <string name="headphonegroup_key" translatable="false">headphoneGroupSetting</string>
    <string name="HeadphoneGroupTitle" translatable="false">Headphones</string>
    <string name="headphone_key" translatable="false">headphoneSetting</string>
    <string name="HeadphoneTitle" translatable="false">Headphone Stop Playback</string>
    <string name="HeadphoneSummary" translatable="false">Stop playing when headphone is pulled or disconnected</string>
    <string name="headphonerewind_key" translatable="false">headphoneRewindSetting</string>
    <string name="HeadphoneRewindTitle" translatable="false">Headphone Pull Rewind Time</string>
    <string name="HeadphoneRewindSummary" translatable="false">Rewind current episode this much when headphones are pulled</string>
    <string name="notification_key" translatable="false">notificationSetting</string>
    <string name="NotificationTitle" translatable="false">Notification Behavior</string>
    <string name="NotificationSummary" translatable="false">Pause, lower volume or do nothing when a notification sound is heard</string>
    <string name="advancedgroup_key" translatable="false">advancedGroupSetting</string>
    <string name="AdvancedGroupTitle" translatable="false">Advanced</string>
    <string name="tweaks_key" translatable="false">tweakSetting</string>
    <string name="TweaksTitle" translatable="false">Enable Tweaks</string>
    <string name="TweaksSummary" translatable="false">Add more advanced options, including force update to fix updating issues</string>
    <string name="FfwdTitle" translatable="false">Fast Forward Seconds</string>
    <string name="FfwdSummary" translatable="false">Number of seconds to fast forward</string>
    <string name="ffwdsecs_key" translatable="false">ffwdsecsSetting</string>
    <string name="RewTitle" translatable="false">Rewind Seconds</string>
    <string name="RewSummary" translatable="false">Number of seconds to rewind</string>
    <string name="rewsecs_key" translatable="false">rewsecsSetting</string>
</resources>