<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pod_settings">
    <PreferenceCategory
        android:title="@string/UpdateGroupTitle"
        android:key="@string/updategroup_key" >
        <ListPreference
	        android:summary="@string/UpdateSummary"
	        android:title="@string/UpdateTitle"
	        android:key="@string/update_key"
	        android:entries="@array/displayWordUpdate"
	        android:entryValues="@array/returnValueUpdate"
	        android:defaultValue="0" />
        <ListPreference
            android:summary="@string/IntervalSummary"
            android:title="@string/IntervalTitle"
            android:key="@string/interval_key"
            android:entries="@array/displayWordInterval"
            android:entryValues="@array/returnValueInterval"
            android:shouldDisableView="true" />
	    <CheckBoxPreference
	        android:summary="@string/DownloadSummary"
	        android:title="@string/DownloadTitle"
	        android:key="@string/download_key"
	        android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/DownloadGroupTitle"
        android:key="@string/downloadgroup_key" >
	    <Preference
	        android:summary="@string/DownloadsSummary"
	        android:title="@string/DownloadsTitle"
	        android:key="@string/downloads_key" />
	    <CheckBoxPreference
	        android:summary="@string/DownloadWifiSummary"
	        android:title="@string/DownloadWifiTitle"
	        android:key="@string/wifi_key"
	        android:defaultValue="false" />
	    <CheckBoxPreference
	        android:summary="@string/Download4GSummary"
	        android:title="@string/Download4GTitle"
	        android:key="@string/four_g_key"
	        android:defaultValue="false" />
	    <CheckBoxPreference
	        android:summary="@string/DownloadPowerSummary"
	        android:title="@string/DownloadPowerTitle"
	        android:key="@string/power_key"
	        android:defaultValue="false" />
	    <CheckBoxPreference
            android:summary="@string/VideoSummary"
            android:title="@string/VideoTitle"
            android:key="@string/video_key"
            android:defaultValue="true" />
	</PreferenceCategory>
	<PreferenceCategory
        android:title="@string/RemoteGroupTitle"
        android:key="@string/remotegroup_key" >
	    <CheckBoxPreference
            android:summary="@string/ControlsSummary"
            android:title="@string/ControlsTitle"
            android:key="@string/controls_key"
            android:defaultValue="false" />
	    <Preference
	        android:key="@string/remote_settings"
	        android:title="@string/RemoteTitle"
	        android:summary="@string/RemoteSummary"
	        android:persistent="false" />
	    <Preference
            android:key="@string/swipe_settings"
            android:title="@string/SwipeTitle"
            android:summary="@string/SwipeSummary"
            android:persistent="false" />
	    <Preference
	        android:key="@string/tap_settings"
	        android:title="@string/TapTitle"
	        android:summary="@string/TapSummary"
	        android:persistent="false" />
	</PreferenceCategory>
	<PreferenceCategory
        android:title="@string/OtherGroupTitle"
        android:key="@string/othergroup_key" >
	    <CheckBoxPreference
	        android:summary="@string/ArchiveSummary"
	        android:title="@string/ArchiveTitle"
	        android:key="@string/archive_key"
	        android:defaultValue="false" />
	    <ListPreference
	        android:summary="@string/NightSummary"
	        android:title="@string/NightTitle"
	        android:key="@string/night_key"
	        android:entries="@array/displayWordNight"
	        android:entryValues="@array/returnValueNight"
	        android:defaultValue="0" />
	    <Preference
	        android:key="@string/tweak_settings"
	        android:title="@string/TweakTitle"
	        android:summary="@string/TweakSummary"
	        android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>