<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/download"
          android:title="@string/downloadEpisode"
          android:icon="@drawable/ic_menu_download"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_menu_delete"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/read"
          android:title="@string/markRead"
          android:icon="@drawable/ic_lock"
          android:showAsAction="always" />
    <item android:id="@+id/unread"
          android:title="@string/markUnread"
          android:icon="@drawable/ic_menu_unread"
          android:showAsAction="always" />
    <item android:id="@+id/lock"
          android:title="@string/lock"
          android:icon="@drawable/ic_menu_lock"
          android:showAsAction="always" />
</menu>