<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<RadioGroup
	    android:id="@+id/radio_group"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="12dip"
	    android:orientation="vertical"
	    android:layout_centerInParent="true"
	    android:gravity="center" >
	    <RadioButton
	        android:id="@+id/radio_manual"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="8dip"
	        android:text="@string/Manual"
	        android:textSize="30sp" />
	    <RadioButton
            android:id="@+id/radio_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:text="@string/Interval"
            android:textSize="30sp" />
	    <RadioButton
            android:id="@+id/radio_magic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:text="@string/Magic"
            android:textSize="30sp" />
	</RadioGroup>
	<Button
        android:id="@+id/UpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doneButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radio_group" />
</RelativeLayout>